# ci-workflows

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: guard.yml  node-ci.yml  oak-policy-ci.yml  pr-hygiene.yml  python-ci.yml  quality-gate.yml  secrets.yml  self-guard.yml
.oak/: policy.yaml
adapters/: claude-code.json  codex.json  opencode.json  reasonix.json  zcode.json
docs/: agent-policy.md
policy/: default.yaml  schema.json
scripts/: apply-rulesets.sh  install-hooks.sh
scripts/hooks/: pre-push
src/oak_policy/: __init__.py  adapters.py  audit.py  cli.py  config.py  engine.py  errors.py  gateway.py  install.py  instructions.py  launcher.py  models.py  process.py  shim.py
templates/: ci.yml
tests/: conftest.py  test_engine.py  test_gateway.py  test_instructions.py
